Fixing border on mobile

--- a/src/components/Aboutme.css
+++ b/src/components/Aboutme.css
@@ -57,4 +57,21 @@ p {
       position:absolute; 
       object-fit: cover;
     }
+
+    .aboutme-place {
+      background-color: rgba(0,0,0, 0.4); /* Black w/opacity/see-through */
+      color: white;
+      font-weight: bold;
+      border: 3px solid #f1f1f1;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      z-index: 2;
+      width: 80%;
+      height: 80%;
+  
+      text-align: center;
+      backdrop-filter: blur(5px);
+  }
   }
